# hesiod-dns-map

./: .conflow.yaml  0-AI-MANIFEST.a2ml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  eclexiaiser.toml  flake.nix  guix.scm  hesiod-dns-map.manifest.ncl  justfile  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.github/workflows/: boj-build.yml  codeql.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/svc/: README.adoc
.well-known/: security.txt
.well-known/groove/: manifest.json
configs/hesiod/: flatracoon.ncl  schema.ncl
crates/hesinfo/: Cargo.toml
crates/hesinfo/src/: main.rs
crates/hesiod-lib/: Cargo.toml
crates/hesiod-lib/benches/: dns_bench.rs
crates/hesiod-lib/src/: config.rs  health.rs  lib.rs  records.rs  server.rs  zone.rs
crates/hesiod-lib/tests/: aspect_test.rs  contract_test.rs  e2e_test.rs  property_test.rs
docs/: tech-debt-2026-05-26.md
docs/governance/: CRG-AUDIT-2026-04-18.adoc
manifests/: configmap.yaml  deployment.yaml  service.yaml
zones/: example.hs
