# SPDX-License-Identifier: PMPL-1.0-or-later

[workspace]
resolver = "2"
members = [
    "crates/hesiod-lib",
    "crates/hesinfo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/hesiod-dns-map"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
