# SPDX-License-Identifier: MPL-2.0

[workspace]
resolver = "2"
members = [
    "crates/hesiod-lib",
    "crates/hesinfo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/hesiod-dns-map"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
proptest = "1.11.0"
criterion = "0.5.1"
