# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "hesiod-lib"
description = "Hesiod DNS naming system library with HS-class TXT record support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hickory-proto = "0.25"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
