# SPDX-License-Identifier: MPL-2.0

[package]
name = "hesiod-lib"
description = "Hesiod DNS naming system library with HS-class TXT record support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hickory-proto = "0.25.2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8.8"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["test-util", "macros"] }
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "dns_bench"
harness = false
